@@ -1,17 +1,18 @@
 package org.xiyu.yee.copper_friend_backport.coppergolem.behavior;
 
-import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.ImmutableMap;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.GlobalPos;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.world.Container;
-import net.minecraft.world.SimpleContainer;
+import net.minecraft.world.entity.EquipmentSlot;
 import net.minecraft.world.entity.PathfinderMob;
 import net.minecraft.world.entity.ai.behavior.Behavior;
 import net.minecraft.world.entity.ai.behavior.BlockPosTracker;
 import net.minecraft.world.entity.ai.memory.MemoryModuleType;
 import net.minecraft.world.entity.ai.memory.MemoryStatus;
 import net.minecraft.world.entity.ai.memory.WalkTarget;
+import org.xiyu.yee.copper_friend_backport.registry.ModMemoryModules;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
@@ -20,8 +21,13 @@ import org.jetbrains.annotations.Nullable;
 import java.util.*;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
-//半石山
+
 public class TransportItemsBetweenContainers extends Behavior<PathfinderMob> {
+    private static final int TARGET_INTERACTION_TIME = 60;
+    private static final int VISITED_POSITIONS_MEMORY_TIME = 6000;
+    private static final int MAX_VISITED_POSITIONS = 10;
+    private static final int IDLE_COOLDOWN = 140;
+    
     private final float speedModifier;
     private final Predicate<BlockState> sourceBlockPredicate;
     private final Predicate<BlockState> destinationBlockPredicate;
@@ -31,10 +37,11 @@ public class TransportItemsBetweenContainers extends Behavior<PathfinderMob> {
     private final Consumer<PathfinderMob> onTravelling;
     private final Predicate<TransportItemTarget> shouldQueueForTarget;
     
+    @Nullable
     private TransportItemTarget currentTarget;
     private int ticksSinceReached;
-    private ContainerInteractionState currentState;
-    private final SimpleContainer inventory = new SimpleContainer(1);
+    @Nullable
+    private ContainerInteractionState interactionState;
 
     public TransportItemsBetweenContainers(
         float speedModifier,
@@ -46,9 +53,12 @@ public class TransportItemsBetweenContainers extends Behavior<PathfinderMob> {
         Consumer<PathfinderMob> onTravelling,
         Predicate<TransportItemTarget> shouldQueueForTarget
     ) {
-        super(Map.of(
-            MemoryModuleType.WALK_TARGET, MemoryStatus.VALUE_ABSENT
-        ), 600);
+        super(ImmutableMap.of(
+            ModMemoryModules.VISITED_BLOCK_POSITIONS.get(), MemoryStatus.REGISTERED,
+            ModMemoryModules.UNREACHABLE_TRANSPORT_BLOCK_POSITIONS.get(), MemoryStatus.REGISTERED,
+            ModMemoryModules.TRANSPORT_ITEMS_COOLDOWN_TICKS.get(), MemoryStatus.VALUE_ABSENT,
+            MemoryModuleType.IS_PANICKING, MemoryStatus.VALUE_ABSENT
+        ));
         this.speedModifier = speedModifier;
         this.sourceBlockPredicate = sourceBlockPredicate;
         this.destinationBlockPredicate = destinationBlockPredicate;
@@ -61,7 +71,14 @@ public class TransportItemsBetweenContainers extends Behavior<PathfinderMob> {
 
     @Override
     protected boolean checkExtraStartConditions(ServerLevel level, PathfinderMob mob) {
-        return true;
+        return !mob.isLeashed();
+    }
+
+    @Override
+    protected boolean canStillUse(ServerLevel level, PathfinderMob mob, long gameTime) {
+        return mob.getBrain().getMemory(ModMemoryModules.TRANSPORT_ITEMS_COOLDOWN_TICKS.get()).isEmpty() 
+            && mob.getBrain().getMemory(MemoryModuleType.IS_PANICKING).isEmpty() 
+            && !mob.isLeashed();
     }
 
     @Override
@@ -69,32 +86,37 @@ public class TransportItemsBetweenContainers extends Behavior<PathfinderMob> {
         super.start(level, mob, gameTime);
         this.currentTarget = null;
         this.ticksSinceReached = 0;
-        this.currentState = null;
-    }
-
-    @Override
-    protected boolean canStillUse(ServerLevel level, PathfinderMob mob, long gameTime) {
-        return true;
+        this.interactionState = null;
     }
 
     @Override
     protected void tick(ServerLevel level, PathfinderMob mob, long gameTime) {
+        if (this.currentTarget != null && !isTargetValid(level, this.currentTarget, mob)) {
+            markAsVisited(level, mob, this.currentTarget.pos());
+            this.currentTarget = null;
+            this.ticksSinceReached = 0;
+        }
+        
         if (this.currentTarget != null && mob.blockPosition().equals(this.currentTarget.pos())) {
-            // At target
             this.ticksSinceReached++;
-            OnTargetReachedInteraction interaction = this.targetReachedInteractions.get(this.currentState);
-            if (interaction != null) {
-                interaction.onReached(mob, this.currentTarget, this.ticksSinceReached);
+            
+            if (this.interactionState != null) {
+                OnTargetReachedInteraction interaction = this.targetReachedInteractions.get(this.interactionState);
+                if (interaction != null) {
+                    interaction.onReached(mob, this.currentTarget, this.ticksSinceReached);
+                }
             }
             
-            if (this.ticksSinceReached >= 60) {
-                this.currentTarget = null;
-                this.ticksSinceReached = 0;
+            if (this.ticksSinceReached == 30) {
+                performItemTransfer(mob, this.currentTarget.container());
+            }
+            
+            if (this.ticksSinceReached >= TARGET_INTERACTION_TIME) {
+                clearMemoriesAfterMatchingTargetFound(mob);
             }
         } else {
-            // Find new target
             if (this.currentTarget == null) {
-                this.findAndSetTarget(level, mob);
+                findAndSetTarget(level, mob);
             }
             
             if (this.currentTarget != null) {
@@ -103,62 +125,236 @@ public class TransportItemsBetweenContainers extends Behavior<PathfinderMob> {
                 mob.getBrain().setMemory(MemoryModuleType.LOOK_TARGET, 
                     new BlockPosTracker(this.currentTarget.pos()));
                 this.onTravelling.accept(mob);
+            } else {
+                enterCooldown(mob);
             }
         }
     }
 
     private void findAndSetTarget(ServerLevel level, PathfinderMob mob) {
         BlockPos mobPos = mob.blockPosition();
-        boolean hasItem = !this.inventory.isEmpty();
+        boolean hasItem = !mob.getMainHandItem().isEmpty();
+        
+        Set<GlobalPos> visited = getVisitedPositions(mob);
+        Set<GlobalPos> unreachable = getUnreachablePositions(mob);
         
         List<BlockPos> candidates = BlockPos.betweenClosedStream(
             mobPos.offset(-horizontalSearchRadius, -verticalSearchRadius, -horizontalSearchRadius),
             mobPos.offset(horizontalSearchRadius, verticalSearchRadius, horizontalSearchRadius)
         ).map(BlockPos::immutable).toList();
         
+        TransportItemTarget bestTarget = null;
+        double bestDistance = Double.MAX_VALUE;
+        boolean foundMatchingItem = false;
+        
         for (BlockPos pos : candidates) {
-            BlockState state = level.getBlockState(pos);
+            GlobalPos globalPos = GlobalPos.of(level.dimension(), pos);
             
-            if (hasItem) {
-                // Looking for destination
-                if (this.destinationBlockPredicate.test(state)) {
-                    BlockEntity be = level.getBlockEntity(pos);
-                    if (be instanceof Container container) {
-                        TransportItemTarget target = new TransportItemTarget(pos, container, be);
-                        if (!this.shouldQueueForTarget.test(target)) {
-                            this.currentTarget = target;
-                            this.currentState = ContainerInteractionState.PLACE_ITEM;
-                            this.ticksSinceReached = 0;
-                            return;
-                        }
+            if (visited.contains(globalPos) || unreachable.contains(globalPos)) {
+                continue;
+            }
+            
+            BlockState state = level.getBlockState(pos);
+            BlockEntity be = level.getBlockEntity(pos);
+            
+            if (!(be instanceof Container container)) {
+                continue;
+            }
+            
+            boolean isSource = !hasItem && this.sourceBlockPredicate.test(state);
+            boolean isDestination = hasItem && this.destinationBlockPredicate.test(state);
+            
+            if (!isSource && !isDestination) {
+                continue;
+            }
+            
+            TransportItemTarget target = new TransportItemTarget(pos, container, be);
+            
+            if (this.shouldQueueForTarget.test(target)) {
+                continue;
+            }
+            
+            if (isSource && container.isEmpty()) {
+                continue;
+            }
+            
+            if (isDestination) {
+                ItemStack heldItem = mob.getMainHandItem();
+                boolean hasMatchingItem = false;
+                boolean hasEmptySlot = false;
+                
+                for (int i = 0; i < container.getContainerSize(); i++) {
+                    ItemStack slotStack = container.getItem(i);
+                    if (slotStack.isEmpty()) {
+                        hasEmptySlot = true;
+                    } else if (ItemStack.isSameItemSameTags(slotStack, heldItem) && 
+                              slotStack.getCount() < slotStack.getMaxStackSize()) {
+                        hasMatchingItem = true;
+                        break;
                     }
+                }
+                
+                if (!hasMatchingItem && !hasEmptySlot) {
+                    continue;
+                }
+                
+                double distance = mobPos.distSqr(pos);
+                if (hasMatchingItem && !foundMatchingItem) {
+                    bestTarget = target;
+                    bestDistance = distance;
+                    foundMatchingItem = true;
+                    this.interactionState = ContainerInteractionState.PLACE_ITEM;
+                } else if (hasMatchingItem && foundMatchingItem && distance < bestDistance) {
+                    bestTarget = target;
+                    bestDistance = distance;
+                    this.interactionState = ContainerInteractionState.PLACE_ITEM;
+                } else if (!foundMatchingItem && hasEmptySlot && distance < bestDistance) {
+                    bestTarget = target;
+                    bestDistance = distance;
+                    this.interactionState = ContainerInteractionState.PLACE_ITEM;
                 }
             } else {
-                // Looking for source
-                if (this.sourceBlockPredicate.test(state)) {
-                    BlockEntity be = level.getBlockEntity(pos);
-                    if (be instanceof Container container) {
-                        if (!container.isEmpty()) {
-                            TransportItemTarget target = new TransportItemTarget(pos, container, be);
-                            if (!this.shouldQueueForTarget.test(target)) {
-                                this.currentTarget = target;
-                                this.currentState = ContainerInteractionState.PICKUP_ITEM;
-                                this.ticksSinceReached = 0;
-                                return;
-                            }
-                        }
+                double distance = mobPos.distSqr(pos);
+                if (distance < bestDistance) {
+                    bestTarget = target;
+                    bestDistance = distance;
+                    this.interactionState = ContainerInteractionState.PICKUP_ITEM;
+                }
+            }
+        }
+        
+        if (bestTarget != null) {
+            this.currentTarget = bestTarget;
+            this.ticksSinceReached = 0;
+        }
+    }
+
+    private void performItemTransfer(PathfinderMob mob, Container container) {
+        if (this.interactionState == ContainerInteractionState.PICKUP_ITEM) {
+            for (int i = 0; i < container.getContainerSize(); i++) {
+                ItemStack stack = container.getItem(i);
+                if (!stack.isEmpty()) {
+                    ItemStack taken = container.removeItem(i, Math.min(16, stack.getCount()));
+                    if (!taken.isEmpty()) {
+                        mob.setItemSlot(EquipmentSlot.MAINHAND, taken);
+                        mob.setGuaranteedDrop(EquipmentSlot.MAINHAND);
+                        container.setChanged();
+                        this.interactionState = ContainerInteractionState.PICKUP_ITEM;
+                        return;
                     }
                 }
+            }
+            this.interactionState = ContainerInteractionState.PICKUP_NO_ITEM;
+        } else if (this.interactionState == ContainerInteractionState.PLACE_ITEM) {
+            ItemStack heldItem = mob.getMainHandItem();
+            if (!heldItem.isEmpty()) {
+                ItemStack remaining = addItemsToContainer(heldItem, container);
+                container.setChanged();
+                mob.setItemSlot(EquipmentSlot.MAINHAND, remaining);
+                
+                if (remaining.isEmpty()) {
+                    this.interactionState = ContainerInteractionState.PLACE_ITEM;
+                } else if (remaining.getCount() < heldItem.getCount()) {
+                    this.interactionState = ContainerInteractionState.PLACE_ITEM;
+                } else {
+                    this.interactionState = ContainerInteractionState.PLACE_NO_ITEM;
+                }
+            } else {
+                this.interactionState = ContainerInteractionState.PLACE_NO_ITEM;
             }
         }
     }
 
-    @Override
-    protected void stop(ServerLevel level, PathfinderMob mob, long gameTime) {
+    private ItemStack addItemsToContainer(ItemStack stack, Container container) {
+        ItemStack remaining = stack.copy();
+        
+        for (int i = 0; i < container.getContainerSize() && !remaining.isEmpty(); i++) {
+            ItemStack slotStack = container.getItem(i);
+            if (!slotStack.isEmpty() && ItemStack.isSameItemSameTags(slotStack, remaining)) {
+                int maxStack = Math.min(container.getMaxStackSize(), slotStack.getMaxStackSize());
+                int canAdd = maxStack - slotStack.getCount();
+                if (canAdd > 0) {
+                    int toAdd = Math.min(canAdd, remaining.getCount());
+                    slotStack.grow(toAdd);
+                    remaining.shrink(toAdd);
+                    container.setItem(i, slotStack);
+                }
+            }
+        }
+        
+        for (int i = 0; i < container.getContainerSize() && !remaining.isEmpty(); i++) {
+            ItemStack slotStack = container.getItem(i);
+            if (slotStack.isEmpty()) {
+                int maxStack = Math.min(container.getMaxStackSize(), remaining.getMaxStackSize());
+                int toAdd = Math.min(maxStack, remaining.getCount());
+                ItemStack toPlace = remaining.split(toAdd);
+                container.setItem(i, toPlace);
+            }
+        }
+        
+        return remaining.isEmpty() ? ItemStack.EMPTY : remaining;
+    }
+
+    private boolean isTargetValid(ServerLevel level, TransportItemTarget target, PathfinderMob mob) {
+        BlockState state = level.getBlockState(target.pos());
+        boolean isCorrectType = mob.getMainHandItem().isEmpty() 
+            ? this.sourceBlockPredicate.test(state) 
+            : this.destinationBlockPredicate.test(state);
+        
+        return isCorrectType && target.blockEntity().equals(level.getBlockEntity(target.pos()));
+    }
+
+    private void markAsVisited(ServerLevel level, PathfinderMob mob, BlockPos pos) {
+        GlobalPos globalPos = GlobalPos.of(level.dimension(), pos);
+        Set<GlobalPos> visited = new HashSet<>(getVisitedPositions(mob));
+        visited.add(globalPos);
+        
+        if (visited.size() > MAX_VISITED_POSITIONS) {
+            enterCooldown(mob);
+        } else {
+            mob.getBrain().setMemoryWithExpiry(
+                ModMemoryModules.VISITED_BLOCK_POSITIONS.get(), 
+                visited, 
+                VISITED_POSITIONS_MEMORY_TIME
+            );
+        }
+    }
+
+    private void clearMemoriesAfterMatchingTargetFound(PathfinderMob mob) {
         this.currentTarget = null;
         this.ticksSinceReached = 0;
+        this.interactionState = null;
+        mob.getNavigation().stop();
         mob.getBrain().eraseMemory(MemoryModuleType.WALK_TARGET);
         mob.getBrain().eraseMemory(MemoryModuleType.LOOK_TARGET);
+        mob.getBrain().eraseMemory(ModMemoryModules.VISITED_BLOCK_POSITIONS.get());
+        mob.getBrain().eraseMemory(ModMemoryModules.UNREACHABLE_TRANSPORT_BLOCK_POSITIONS.get());
+    }
+
+    private void enterCooldown(PathfinderMob mob) {
+        this.currentTarget = null;
+        this.ticksSinceReached = 0;
+        this.interactionState = null;
+        mob.getNavigation().stop();
+        mob.getBrain().setMemory(ModMemoryModules.TRANSPORT_ITEMS_COOLDOWN_TICKS.get(), IDLE_COOLDOWN);
+        mob.getBrain().eraseMemory(MemoryModuleType.WALK_TARGET);
+        mob.getBrain().eraseMemory(MemoryModuleType.LOOK_TARGET);
+        mob.getBrain().eraseMemory(ModMemoryModules.VISITED_BLOCK_POSITIONS.get());
+        mob.getBrain().eraseMemory(ModMemoryModules.UNREACHABLE_TRANSPORT_BLOCK_POSITIONS.get());
+    }
+
+    @Override
+    protected void stop(ServerLevel level, PathfinderMob mob, long gameTime) {
+        this.onTravelling.accept(mob);
+        mob.getNavigation().stop();
+    }
+
+    private static Set<GlobalPos> getVisitedPositions(PathfinderMob mob) {
+        return mob.getBrain().getMemory(ModMemoryModules.VISITED_BLOCK_POSITIONS.get()).orElse(Set.of());
+    }
+
+    private static Set<GlobalPos> getUnreachablePositions(PathfinderMob mob) {
+        return mob.getBrain().getMemory(ModMemoryModules.UNREACHABLE_TRANSPORT_BLOCK_POSITIONS.get()).orElse(Set.of());
     }
 
     public enum ContainerInteractionState {
